# HFT-Project

./: README.md  check_dependencies.py  pyproject.toml
src/: scripting.ipynb
src/archive/: 0_latency.ipynb  1_data_prep.ipynb  3_binance_imbalance.ipynb  3_imbalance.ipynb  4_hft_grid.ipynb  5_hft_grid_skew.ipynb  6_hft_glft.ipynb  helloworld.py  model_BEERUSDT.py
src/archive_2/: 5_hft_grid_skew.ipynb  6_hft_glft-Copy1.ipynb  6_hft_glft-rebate2.ipynb  6_hft_glft-rebate3.ipynb  6_hft_glft.ipynb
src/backtest/: CommonUtilsBacktest.py
src/base_model/: base_model.ipynb  base_model.py
src/beer_usdt/: baseline_model.ipynb
src/data/: 6_hft_glft.ipynb  data_sourcing.py
src/hftbacktest/: data_prep.ipynb  exploration.ipynb  order_book_imbalance.ipynb  scripting.py
src/lib/: CommonUtilsBacktest.py  model_BEERUSDT.py
